--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "411_wk4_day1_react_router",
   "version": "0.1.0",
+  "homepage": "https://rdelena.github.io/411_wk4_day1_react_router/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
